# modelops-bundle

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
dev/: create_sample_project.sh  docker-compose.yml  registry-config.yml  setup_local_env.sh
docs/: auto_code.md  cache_locking.md  developer-notes.md  index.md  oras.md  provenance_system.md  pull-mirror-semantics.md  storage.md
docs/archive/: fixes_summary.md  localcas_implementation_plan.md  sim_task_workflow.md
docs/notes/: project_status.md  todo.md
src/modelops_bundle/: __init__.py  api.py  bundle_service.py  cli.py  config.py  constants.py  context.py  core.py  diffing.py  digest_cache.py  discovery.py  env_manager.py  errors.py  hashing.py  ignore.py  local_cache.py  manifest.py  model_state.py  model_status_computer.py  ops.py  oras.py  policy.py  preflight.py  registry.py  repository.py  service_types.py  snapshot.py  status_display.py  storage_models.py  target_state.py  target_status_computer.py  templates.py  utils.py  working_state.py
src/modelops_bundle/adapters/: __init__.py  repository.py
src/modelops_bundle/auth/: __init__.py
src/modelops_bundle/core/: bundle_config.py
src/modelops_bundle/storage/: __init__.py  azure.py  base.py  factory.py  fs.py
tests/: __init__.py  conftest.py  test_adapter_entry_point.py  test_adapter_repository.py  test_add_directory.py  test_add_ignore.py  test_api.py  test_atomic_operations.py  test_bundle_service.py  test_bundle_service_integration.py  test_cli_integration.py  test_concurrent_operations.py  test_config.py  test_deletions.py  test_deletions_simple.py  test_diffing.py  test_digest_consistency.py  test_e2e.py  test_ensure_local.py  test_environment.py  test_environment_credentials.py  test_environment_registry_switching.py  test_hashing.py  test_ignore.py  test_local_cache.py  test_manifest_operations.py  test_model_status.py  test_path_security.py  test_preflight.py  test_preflight_integration.py  test_provenance_integration.py  test_pull_mirror_semantics.py  test_pull_safety.py  test_push_tags.py  test_registry.py  test_registry_utils.py  test_repository.py  test_restore_deleted.py  test_service_types.py  test_status_untracked.py  (+2 more)
tests/fixtures/: sample_project.py
