[project]
name = "modelops-bundle"
version = "0.1.0"
description = "OCI artifact-based model synchronization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "oras>=0.2.37",
    "pydantic>=2.11.7",
    "pyyaml>=6.0",
    "rich>=14.1.0",
    "typer>=0.16.1",
]


[project.scripts]
modelops-bundle = "modelops_bundle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
