[project]
name = "modelops-bundle"
version = "0.1.0"
description = "OCI artifact-based model synchronization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modelops-contracts @ git+https://github.com/institutefordiseasemodeling/modelops-contracts.git",
    "oras @ git+https://github.com/vsbuffalo/oras-py.git",
    "pathspec>=0.12.1",
    "portalocker>=3.2.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0",
    "rich>=14.1.0",
    "toml>=0.10.2",
    "typer>=0.16.1",
    "azure-storage-blob>=12.14.0",
]


[project.scripts]
modelops-bundle = "modelops_bundle.cli:main"
mops-bundle = "modelops_bundle.cli:main"

[project.entry-points."modelops.bundle_repos"]
modelops_bundle = "modelops_bundle.repository:ModelOpsBundleRepository"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",  # Show short test summary for all except passed
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.13.2",
]
